finished UpsertProject() repo
